--- a/src/components/CharacterWrapper.module.css
+++ b/src/components/CharacterWrapper.module.css
@@ -1,17 +1,21 @@
+.characterWrapper {
+    display: grid;
+}
+
 @media only screen and (max-width: 700px) {
     .characterWrapper {
-        column-count: 1;
+        grid-template-columns: 1fr;
     }
 }
 
 @media only screen and (min-width: 700px) {
     .characterWrapper {
-        column-count: 2;
+        grid-template-columns: 1fr 1fr;
     }
 }
 
 @media only screen and (min-width: 1000px) {
     .characterWrapper {
-        column-count: 3;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 }
