--- a/src/components/HouseSearch.module.css
+++ b/src/components/HouseSearch.module.css
@@ -3,3 +3,10 @@
     margin: 1rem 0;
     width: 15rem;
 }
+
+@media only screen and (max-width: 700px) {
+    .select {
+        float: unset;
+        width: 100%;
+    }
+}
